# StatAnaly

./: .gitignore  CMakeLists.txt  README.md  playground.cpp
doc/: Doxyfile
doc/Documentation/: chapter_distributions.tex  chapter_intro.tex  chapter_sum_of_RV.tex  doc.tex  section_prob_distribution_usage.tex  section_sum_of_RV_usage.tex
examples/: Markov_chain.md
include/: CMakeLists.txt  adjacency.h  const_values.h  dCompare.h  dContainer.h  dConvolution.h  double_dispatcher.h  fl_comparison.h  graph.h  hasher.h  markov_chain.h  rand_num_gen.h  statanaly.h  type_info.h
include/density/: disCauchy.h  disChi.h  disChiSq.h  disErlang.h  disExponential.h  disGamma.h  disIrwinHall.h  disMixture.h  disNcChi.h  disNcChiSq.h  disNormal.h  disRayleigh.h  disRician.h  disUniform.h  probDensFunc.h  probDistr.h  specialFunc.h
src/: CMakeLists.txt  adjacency.h  dContainer.cpp  dConvolution.cpp  graph.h  type_info.cpp
src/density/: disChiSq.cpp  probDensFunc.cpp  probDistr.cpp  specialFunc.cpp
tests/: CMakeLists.txt  tst_utils_graph.h
tests/feature_test/: tst_markdov_chain.cpp  tst_rng_unix.cpp
tests/unit_test/: tst_adjacency_matrix.cpp  tst_dCompare.cpp  tst_dContainer.cpp  tst_dConvolution.cpp  tst_dConvolution_squares.cpp  tst_disBase.cpp  tst_disCauchy.cpp  tst_disChi.cpp  tst_disChiSq.cpp  tst_disErlang.cpp  tst_disExponential.cpp  tst_disGamma.cpp  tst_disIrwinHall.cpp  tst_disMixture.cpp  tst_disNcChi.cpp  tst_disNcChiSq.cpp  tst_disNormal.cpp  tst_disRayleigh.cpp  tst_disRician.cpp  tst_disUniform.cpp  tst_graph.cpp  tst_specialFunctions.cpp
